bug(custom-treatments-braces.sass): not showing image on mobile

--- a/src/components/custom/custom-treatments-braces/custom-treatments-braces.sass
+++ b/src/components/custom/custom-treatments-braces/custom-treatments-braces.sass
@@ -33,6 +33,10 @@
       height: 300px
       width: 300px
 
+    @include phone
+      height: 300px
+      width: 300px
+
   &__center-col
     @extend .flex-column
     flex: 1 1 0
